@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2079 2011/12/09 13:19:45 mg Exp $
+# $Id: CHANGES,v 1.2080 2011/12/09 13:30:22 des Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0.beta3 2011-12-??
+ - 2011-12-09 Fixed bug#7995 - Previous owner is missing in AgentTicketMove.
  - 2011-12-09 Updated Japanese Translation, thanks to Kaoru Hayama!
  - 2011-12-08 A bug related to oracle made database updates necessary when upgrading from beta1 or beta2.
     Please see the UPGRADING file for details.
